Add icon for menu

--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -8,7 +8,7 @@
     <!-- Display the _event name -->
     <ion-navbar no-border-bottom>
         <ion-title>
-            {{ event.name }}
+            {{ event.name }}<ion-icon name="menu" class="menu-button" (click)="displayMenu()"></ion-icon>
         </ion-title>
     </ion-navbar>
 
