--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -6,8 +6,13 @@
 -->
 <ion-header>
     <ion-navbar>
-        <ion-title text-center>Evènements</ion-title>
+        <ion-title>Evènements</ion-title>
+        <button ion-button menuToggle side="right">
+            <ion-icon name="menu" class="menu-button"></ion-icon>
+        </button>
+
     </ion-navbar>
+
 
     <!-- Filter events -->
     <ion-toolbar no-border-top>
