Fix bug in about page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -16,7 +16,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-list radio-group [(ngModel)]="currentIpChoice">
+    <ion-list>
         <ion-item text-justify>
             Cette application est destinée à consulter les informations pour les Joutes sportives du Centre professionnel du Nord vaudois (CPNV). <br /><br />
             Vous utilisez la version <b>1.0</b>.<br /><br />
