--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -33,7 +33,7 @@
         </ion-row>
     </ion-grid>
 
-    <ion-col width-100><h2>Liste des <b>Participants</b></h2></ion-col>
+    <ion-col width-100><h2>Liste des <b>Equipes</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
             <ion-list>
@@ -115,4 +115,3 @@
         </ion-card-content>
     </ion-card>
 </ion-content>
-
