--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -32,6 +32,8 @@
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
+
+  <script src="build/vendor.js"></script>
 
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
