Display matches for a team

--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -72,74 +72,74 @@
                     <!-- When we click on the name of the match -> go to detail pool -->
                     <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(tournament, match.group_match_id)">
                         <!-- Display a border green if the team win and display the score -->
-                        <ion-row class="border-win" *ngIf="match.ownScore > match.team2Score">
+                        <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center class="score">
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border red if the team lose and display the score -->
-                        <ion-row class="border-lose" *ngIf="match.ownScore < match.team2Score">
+                        <ion-row class="border-lose" *ngIf="match.ownScore < match.opponentScore">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border orange if teams have tied and display the score -->
-                        <ion-row class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
+                        <ion-row class="border-draw" *ngIf="match.ownScore == match.opponentScore && (match.ownScore != 0 && match.opponentScore != 0)">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border grey if the match didn't begin -->
-                        <ion-row class="border-inc" *ngIf="match.status == 'A venir' ">
+                        <ion-row class="border-inc" *ngIf="match.ownScore == 0 && match.opponentScore == 0">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display time of the match -->
                             <ion-col text-center class="start">
-                                <ion-note class="items">{{ match.start }}</ion-note>
+                                <ion-note class="items">{{ match.startTime }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
                     </ion-item>
