--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -70,7 +70,7 @@
             <ion-card-content no-padding>
                 <ion-list >
                     <!-- When we click on the name of the match -> go to detail pool -->
-                    <ion-item *ngFor="let match of matches.futureMatches" (click)="goToPool(tournament, match.idPool)">
+                    <ion-item *ngFor="let match of matches" (click)="goToPool(tournament, match.idPool)">
                         <!-- Display a border green if the team win and display the score -->
                         <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
                             <!-- Display the name of the team -->
@@ -135,61 +135,6 @@
                             <!-- Display time of the match -->
                             <ion-col text-center class="start">
                                 <ion-note class="items">{{ match.startTime }}</ion-note>
-                            </ion-col>
-
-                            <!-- Display the name of the second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
-                    </ion-item>
-                    <ion-item *ngFor="let match of matches.finishedMatches" (click)="goToPool(tournament, match.idPool)">
-                        <!-- Display a border green if the team win and display the score -->
-                        <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
-
-                            <!-- Display the score -->
-                            <ion-col text-center class="score">
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
-                            </ion-col>
-
-                            <!-- Display the name of second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
-
-                        <!-- Display a border red if the team lose and display the score -->
-                        <ion-row class="border-lose" *ngIf="match.ownScore < match.opponentScore">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
-
-                            <!-- Display the score -->
-                            <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
-                            </ion-col>
-
-                            <!-- Display the name of the second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
-
-                        <!-- Display a border orange if teams have tied and display the score -->
-                        <ion-row class="border-draw" *ngIf="match.ownScore == match.opponentScore && (match.ownScore != 0 && match.opponentScore != 0)">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
-
-                            <!-- Display the score -->
-                            <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
