Fixed the pool detail page to work with the new API

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
   <script src="build/main.js"></script>
 
   <script>
+  // SFO: Added function to the array object to sort on an attribute
   (function(){
     if (typeof Object.defineProperty === 'function'){
       try{Object.defineProperty(Array.prototype,'sortBy',{value:sb}); }catch(e){}
