--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -83,28 +83,29 @@
     <ion-col width-100><h2>Liste des <b>Poules</b> / <b>Eliminations</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
+
             <!-- Add a slider to navigate between pools and eliminations -->
-            <ion-slides [options]="{pager:true}">
-                <ion-slide *ngFor="let stage of tournamentData.stages" class="items">
+            <ion-slides [options]="sliderOptions">
+                <ion-slide *ngFor="let stage of poolsData" class="items">
                     <ion-row>
                         <!-- Display the name of the stage -->
                         <ion-col width-100>
-                            <h1>{{stage.name}}</h1>
+                            <h1>Stage {{stage[0].stage}}</h1>
                         </ion-col>
                     </ion-row>
 
                     <ion-list>
                         <!-- When we click on the name of the match -> go to detail pool -->
-                        <ion-item *ngFor="let pool of stage.pools" (click)="goToPool(pool)">
+                        <ion-item *ngFor="let pool of stage" (click)="goToPool(pool)">
                             <ion-row>
                                 <!-- Display the name of group -->
                                 <ion-col width-50 no-padding>
-                                    {{ pool.name }}
+                                     Pool {{ pool.name }}
                                 </ion-col>
 
                                 <!-- Display the number of match played on the total of matches to be played -->
                                 <ion-col width-50 text-right no-padding>
-                                    <ion-note>{{pool.playedMatchs}} / {{pool.totalMatchs}}</ion-note>
+                                    <ion-note><ion-img class="status-icon" src="assets/{{ pool.isFinished == 1 ? 'finished.png': 'nFinished.png'}}" width="20" height="20"></ion-img></ion-note>
                                 </ion-col>
                             </ion-row>
                         </ion-item>
