--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -8,8 +8,13 @@
     <ion-navbar>
         <!-- Display the last name and first name -->
         <ion-title>
-            {{ participantData.lastname }} {{ participantData.firstname }}<ion-icon name="menu" class="menu-button" (click)="displayMenu()"></ion-icon>
+            {{ participantData.lastname }} {{ participantData.firstname }}
         </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="displayMenu()">
+                <ion-icon name="menu" class="menu-button"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
@@ -23,12 +28,14 @@
     <div *ngFor="let tournament of participantData.tournaments">
         <!-- Display different content if the _tournament is not "Marche"-->
         <ion-col *ngIf="tournament.sport != 'Marche'" width-100 no-padding>
-            <ng-container *ngFor="let teamData of teamsData;">
-                <ng-container ng-if="teamData.team.tournament.id == tournament.id">
+            <!-- <ng-container *ngFor="let team of teamData;"> -->
+                <ng-container ng-if="teamData.tournament.id == tournament.id">
                     <!-- Display the name of team and display a icon trophy if the team have a status "Vainqueur" -->
                     <ion-col width-100>
-                        <h2>Equipe <b>{{ teamData.team.name }}</b>
-                            <ion-icon name="trophy" class="color-star" *ngIf="teamData.team.status == 'Vainqueur'"></ion-icon>
+                        <h2>
+                            Equipe
+                            <b>{{ teamData.name }}</b>
+                            <ion-icon name="trophy" class="color-star" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
                         </h2>
                     </ion-col>
                     <!-- Display the name of members -->
@@ -36,15 +43,15 @@
                         <ion-card-content no-padding>
                             <ion-grid text-center>
                                 <ion-row style="flex-wrap: wrap;">
-                                    <ion-col width-33 *ngFor="let member of teamData.team.members">
-                                        <span class="items">{{ member.firstname }} {{ member.lastname }}</span>
+                                    <ion-col width-50 *ngFor="let member of teamData.members">
+                                        <span class="items">{{ member.lastname }} {{ member.firstname }}</span>
                                     </ion-col>
                                 </ion-row>
                             </ion-grid>
                         </ion-card-content>
                     </ion-card>
                 </ng-container>
-            </ng-container>
+            <!-- </ng-container> -->
         </ion-col>
         <!-- Display the _tournament name -->
         <ion-col width-100><h2>Participe à <b>{{ tournament.name }}</b></h2></ion-col>
@@ -98,7 +105,7 @@
     </div>
 
     <!-- Display the detail for the team's participant -->
-    <div *ngFor="let team of participantData.team">
+    <!-- <div *ngFor="let team of participantData.teams"> -->
         <!-- Display the name of _tournament -->
         <ion-col width-100 class="no-padding-bottom"><h2>Liste des <b>Matchs</b></h2></ion-col>
         <ion-col width-100 no-padding>
@@ -109,81 +116,81 @@
             <ion-card-content no-padding>
                 <ion-list>
                     <!-- When we click on the name of the match -> go to detail _pool -->
-                    <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(match.group_match_id)">
+                    <ion-item *ngFor="let match of teamData.matches" (click)="goToPool(match.idPool)">
                         <!-- Display a border green if the team win and display the score -->
-                        <ion-row class="border-win" *ngIf="match.ownScore > match.team2Score">
+                        <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center class="score">
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border red if the team lose and display the score -->
-                        <ion-row class="border-lose" *ngIf="match.ownScore < match.team2Score">
+                        <ion-row class="border-lose" *ngIf="match.ownScore < match.opponentScore">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border orange if teams have tied and display the score -->
-                        <ion-row class="border-draw" *ngIf="(match.team1Score == match.team2Score) && (match.start == '')">
+                        <ion-row class="border-draw" *ngIf="match.ownScore == match.opponentScore && match.isFinished">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display the score -->
                             <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.team2Score }}</ion-note>
+                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
 
                         <!-- Display a border grey if the match didn't begin -->
-                        <ion-row class="border-inc" *ngIf="match.status == 'A venir' ">
+                        <ion-row class="border-inc" *ngIf="!match.isFinished">
                             <!-- Display the name of the team -->
                             <ion-col width-33 class="items">
-                                {{ teamData.name }}
+                                {{ match.ownName }}
                             </ion-col>
 
                             <!-- Display time of the match -->
                             <ion-col text-center class="start">
-                                <ion-note class="items">{{ match.start }}</ion-note>
+                                <ion-note class="items">{{ match.startTime }}</ion-note>
                             </ion-col>
 
                             <!-- Display the name of the second team -->
                             <ion-col width-33 class="items" text-right>
-                                {{ match.team2 }}
+                                {{ match.opponentName }}
                             </ion-col>
                         </ion-row>
                     </ion-item>
                 </ion-list>
             </ion-card-content>
         </ion-card>
-    </div>
+    <!-- </div> -->
 </ion-content>
