--- a/src/pages/pool/pool.html
+++ b/src/pages/pool/pool.html
@@ -8,8 +8,13 @@
     <ion-navbar>
         <!-- Display the name of _tournament and the name of pool -->
         <ion-title>
-            {{ tournament.name }} - {{ pool.name }}<ion-icon name="menu" class="menu-button" (click)="displayMenu()"></ion-icon>
+            {{ tournament.name }} - {{ pool.name }}
         </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="displayMenu()">
+                <ion-icon name="menu" class="menu-button"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
