--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header >
+<ion-header>
     <!-- Display the _event name -->
     <ion-navbar no-border-bottom>
         <ion-title>
@@ -56,9 +56,16 @@
 
             <!-- When we click on the name of the team -> go to detail team -->
             <ion-item *ngFor="let team of filteredTeams">
-                <div class="items" (click)="goToTeam(team)">{{team.name}} ({{team.sport}})</div>
-                <ion-icon item-right name="star" class="color-star" (click)="toggleFavoriteTeam(team)" *ngIf="team.favorite"></ion-icon><!-- When we click on the star -> add the team in favorite -->
-                <ion-icon item-right name="star-outline" (click)="toggleFavoriteTeam(team)" *ngIf="!team.favorite"></ion-icon><!-- When we click on the star -> remove the team in favorite -->
+                <div class="items" (click)="goToTeam(team)">
+                    {{team.name}}
+                    <ion-note item-right>
+                        ({{team.sport}})
+                    </ion-note>
+                </div>
+                <!-- When we click on the star -> add the team in favorite -->
+                <ion-icon item-right name="star" class="color-star" (click)="toggleFavoriteTeam(team)" *ngIf="team.favorite"></ion-icon>
+                <!-- When we click on the star -> remove the team in favorite -->
+                <ion-icon item-right name="star-outline" (click)="toggleFavoriteTeam(team)" *ngIf="!team.favorite"></ion-icon>
             </ion-item>
         </ion-list>
 
@@ -79,7 +86,13 @@
 
             <!-- When we click on the name of the _participant-> go to detail _participant -->
             <ion-item *ngFor="let participant of filteredParticipants">
-                <div class="items" (click)="goToParticipant(participant)">{{participant.lastname}} {{participant.firstname}}</div>
+                <div class="items" (click)="goToParticipant(participant)">
+                    {{participant.lastname}} {{participant.firstname}}
+                    <ion-note item-right *ngIf="participant.sports && participant.sports.length > 0">
+                        <!-- Might be to much functionaliy in the view. Could port to the controller. -->
+                        - ({{participant.sports.join(", ")}})
+                    </ion-note>
+                </div>
             </ion-item>
         </ion-list>
 
