--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -85,7 +85,7 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-col width-100><h2>Liste des <b>Poules</b> / <b>Eliminations</b></h2></ion-col>
+    <ion-col width-100><h2>Liste des <b>Poules</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
 
